# moos

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: ci.yml
src/: compact_vec.rs  cow_str.rs  inline_str.rs  lib.rs  small_string.rs
