[package]
  name = "moos"
  version = "0.1.0"
  edition = "2024"
  license = "MIT OR Apache-2.0"
  authors = ["Nicholas Berlette <nick@berlette.com>"]
  description = "Memory-Optimized Objects and Strings (MOOS)"
  keywords = [
    "cow",
    "string",
    "small string optimization",
    "sso",
    "borrowed",
    "owned",
    "inlined",
    "inline",
    "heapless",
    "no-std",
  ]
  repository = "https://github.com/nberlette/moos"
  homepage = "https://n.berlette.com/moos"
  documentation = "https://docs.rs/moos"
  readme = "README.md"
  publish = true

[features]
  default = ["serde"]
  serde   = ["dep:serde"]
  std     = ["serde?/std"]

[dependencies]
  derive_more = { version = "2", features = [
    "is_variant",
    "constructor",
    "index",
    "index_mut",
  ] }
  serde = { version = "1.0", features = [
    "derive",
    "rc",
    "alloc",
  ], default-features = false, optional = true }
