[package]
  name = "moos"
  version = "0.1.0"
  edition = "2024"
  license = "MIT"
  authors = ["Nicholas Berlette <nick@berlette.com>"]
  description = "Memory-Optimized Objects and Strings (MOOS)"
  keywords = [
    "memory optimization",
    "small string optimization",
    "inline strings",
    "no-std",
  ]
  repository = "https://github.com/nberlette/moos"
  homepage = "https://n.berlette.com/moos"
  documentation = "https://docs.rs/moos"
  readme = "README.md"
  publish = true

[features]
  default = ["serde", "rc", "serde?/alloc", "is", "ctors", "index"]
  serde   = ["dep:serde"]
  std     = ["serde?/std"]
  rc      = ["serde?/rc"]
  is      = ["derive_more/is_variant"]
  ctors   = ["derive_more/constructor"]
  index   = ["derive_more/index", "derive_more/index_mut"]

[dependencies]
  derive_more = { version = "2", default-features = false, optional = true }
  serde = { version = "1.0", features = [
    "derive",
  ], default-features = false, optional = true }
