[package]
name          = "moos"
version       = "0.1.0"
edition       = "2024"
license       = "MIT"
authors       = ["Nicholas Berlette <nick@berlette.com>"]
description   = "Memory-Optimized Objects and Strings (MOOS)"
keywords      = ["string", "memory", "performance", "stack", "no-std"]
repository    = "https://github.com/nberlette/moos"
homepage      = "https://github.com/nberlette/moos#readme"
documentation = "https://docs.rs/moos"
readme        = "README.md"
publish       = true

[features]
default      = ["serde", "is_variant", "constructors", "index"]
serde        = ["dep:serde"]
std          = ["serde?/std"]
is_variant   = ["derive_more/is_variant"]
constructors = ["derive_more/constructor"]
index        = ["derive_more/index", "derive_more/index_mut"]

[dependencies]
derive_more = { version = "2.1", default-features = false, optional = true }
serde = { version = "1.0", features = [
  "derive",
  "rc",
  "alloc",
], default-features = false, optional = true }
